# mcp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_LOG.md  CHANGELOG.md  CHECKLIST_CODE_REVIEW.md  CHECKLIST_DEVELOPMENT.md  CONTRIBUTING.md  CYCLE_LOG.md  DESIGN_GUIDELINES.md  DEVELOPER_GUIDE.md  GEMINI.md  PLAN.md  REVIEW_CYCLE_PLAN.md  SYSTEM_INVENTORY.md  benchmark_orchestrator.py  opencode.json  orchestrated_backup.sh  package.json  pyproject.toml  requirements.txt  simple_backup.sh  workspace_sync.sh
dropbox-utils/: .editorconfig  .env.example  .gitignore  Link to Dropbox  README.md  opencode.json  pyproject.toml
dropbox-utils/api_project/: .gitignore  CONTINUITY.md
dropbox-utils/tests/: test_list_dropbox_files.py
shared/: .gitignore  README-archive.md  __init__.py  pyproject.toml
shared/analysis/: ai_log_analyzer.py  analyze_logs.py  check_api_keys.py  check_naming.py  code_review_unified.py  crs_reality_check.py  dedup_checker.py  dependency_monitor.py  deps_check.py  docs_consistency_checker.py  fix_ai_log_analyzer_prompt.py  full_review.py  git_todo_monitor.py  health_check.py  monitor.py  monitor_coordinator.py  monitor_errors.py  perf-monitor.py  performance_monitor.py  reality_checker.py  report_analyzer.py  review_errors.py  security_check.py  security_monitor.py  simple_error_review.py  type_checker.py  unified_analyzer.py  unified_monitor.py  validation_monitor.py
shared/automation/: automated_correction.py  automation_manager.py  dev_workflow.py  learning_workflow.py  refactor_workflow.py  smart_workflow.py  task_automator.py  task_manager.py  tmp_fix_automated_correction_docstring.py  tmp_fix_automated_correction_docstring_v2.py  workflow.py  workflow_automation.py  workflow_backup.py  ws_automation_addon.py
shared/cli/: approve_suggestions.py  cli.py  code_review_toolkit_wrapper.py  devflow_cli.py  gadd_wrapper.py  kb_manager.py  main.py  maintenance_monitor.py  maintenance_system.py  tool_cli.py  workspace_cli.py
shared/code-review-toolkit/: MAINTENANCE.md  README.md  pyproject.toml
shared/config/: __init__.py  ai_autoconfig.py  ci_config.py  config.py  config_manager.py  environment_manager.py  logging_config.py  optimized_config.py  project_config_manager.py  provider_config_manager.py  unified_config.py
shared/docs/: PROJECT_SETUP.md  README.md
shared/models/: knowledge_base_schema.py  list_models.py  model_selector.py  models.py  schema.py
shared/nested_shares/: __init__.py
shared/utils/: ai_provider_manager.py  audit_tools.py  backup_manager.py  common_types.py  config_utils.py  consolidation_manager.py  count_loc.py  create_performance_baseline.py  csv_head.py  database.py  db_utils.py  enhanced_kb_manager.py  enhanced_pre_push_validator.py  enhanced_repo_knowledgebase.py  env_diff.py  env_var_diff.py  environment_manager.py  file_renamer.py  final_restructure.py  formatter.py  git_backup.py  git_diff_helper.py  ignore_logic.py  jsonschema_diff.py  knowledge_db.py  (+23 more)
(+509 files in other folders)
