[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.1.0"
description = "Python project with LLM integration and MCP support"
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "ruff",
    "requests",
    "httpx",
    "boto3",
    "mypy",
    "git-changelog",
    "pydantic",
    "pydantic-settings",
    "psutil",
    "google-generativeai",
    "mcp>=1.2.0",
    "firebase-admin>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "isort",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py310"]
