[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared tools and utilities extracted from legacy shared-tools"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["*", "analysis*", "automation*", "cli*", "config*", "models*", "utils*", "nested*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
